# junk-code

./: .gitignore  README.md
QuickImageResizer/: QuickImageResizer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
download-Qt/: .gitignore  download-Qt.pro  downloadmanager.cpp  downloadmanager.h  main.cpp
env-copy/: mainwindow.cpp  mainwindow.h  mainwindow.ui
find-color/: .gitignore  main.cpp
floor-plan-gen/: floor-plan-gen.pro  fp_source.gltf  mainwindow.cpp  mainwindow.h  resource.qrc
gltf-node-traverse/: .gitignore  gltf-node-traverse.pro  main.cpp
gltf-pick/: .gitignore  gltf-pick.pro  gltfpicker.cpp  gltfpicker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gltf-tidy/: gltf-tidy.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
gltf-wizard/: .gitignore  CMakeLists.txt  gltf-wizard.h  gltf-wizard2.cpp  gltf-wizard2.sln  gltf-wizard2.vcxproj  gltf-wizard2.vcxproj.filters  tiny_gltf.h
gltf-wizard/gltf-wizard/: CMakeLists.txt  gltf-wizard.cpp
id-watermark/: CMakeLists.txt  main.cpp
img-batch-conversion/: img-batch-conversion.pro  main.cpp
json-minify/: json-minify.cpp  json-minify.sln  json-minify.vcxproj  json-minify.vcxproj.filters
kindle-highlights/: My Clippings.txt  MyClippings.out.txt  translate-my-clippings.py
lua-binding-cpp/: .gitignore  hello.lua  lua-binding-cpp.cpp  lua-binding-cpp.vcxproj  lua-binding-cpp.vcxproj.filters  stdafx.cpp  stdafx.h
miniz-Qt/: .gitignore  mainwindow.cpp  mainwindow.h  mainwindow.ui  miniz-Qt.pro  miniz.c  miniz.h
minizip-test/: main.cpp
mypaint-test/: .gitignore  mainwindow.cpp  (+1 more)
(+50 files in other folders)
